Fix hero-image distortion issue.
Fix img distortion by adding object-fit: cover; to hero img in stylesheet.

--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,12 @@ body {
     padding: 12px 100px 48px 100px;
 }
 
+.hero-image img {
+    object-fit: cover;
+    width: 500px;
+    height: 275px;
+}
+
 .cta-1 {
     display: flex;
     flex-direction: column;
